# iasc-functors-sample-scala

./: README.md  validated.cabal
spec/: ValidatedAccSpec.hs  ValidatedSpec.hs
src/Data/: Validated.hs
src/Data/Validated/: Acc.hs
