name:                validated
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Franco Leonardo Bulgarelli
maintainer:          flbulgarelli@yahoo.com.ar
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:
    src
  default-language:    Haskell2010
  exposed-modules:
    Data.Validated
    Data.Validated.Acc

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
      -fno-warn-missing-signatures
  hs-source-dirs:
      spec
  main-is:
      Spec.hs
  build-depends:
    base                      >= 4     && < 5,
    hspec                     >= 2     && < 3,
    validated